[Enhancement] Code Quality Issues from SonarQube Analysis (#21)
* Fix unused parameters for FootballDataServiceImpl class

* Fix Stream.collect usage for ScrapingServiceImpl class

* Fix remove unused methods for ScrapingServiceImpl class

* Fix duplicate string literals for ScrapingServiceImpl class

* Fix nested ternary issue for Scrapping Service

* Fix cognitive complexity for getPrediction method in ScrapingServiceImpl class

* Fix variable declaration for opponentWins in ScrapingServiceImpl class

* Fix empty catch block for ScrapingServiceImpl class

* Fix Stream.collect(Collectors.toList()) for ScrapingServiceImpl class

* Fix assertion argument order for UserTest class

* Fix assertion argument order for JwtTokenProviderTest class